// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Homepage rendering renders Home in english 1`] = `
<div>
  <div>
    <img
      alt="canvas"
      class="responsive-image"
      src="canvas2.png"
    />
    <span
      class="text-span"
    >
      Internet :
      <br />
       
      are you aware of dangers
      <br />
       
      your childrens encounter ?
    </span>
    <div
      class="row responsive-image Home"
    >
      <div>
        <br />
        <br />
        <img
          alt="whois"
          src="CacherPseudo.jpg"
        />
      </div>
      <div
        class="txt-intro"
      >
        <h3
          class="h7-font"
        >
          Our solution :
        </h3>
        <h6
          class="h6-font"
        >
          For a healthy navigation, use Überschutz.
          <br />
          This non-blocking software will warn you when your child is at risk on the Internet.
        </h6>
        <h8
          class="italic-txt"
        >
          Suicide, drugs, anorexia, harassment, pornographic content ... You can not imagine what he's facing.
        </h8>
      </div>
    </div>
    <div
      class="Home responsive-image"
    >
      <br />
      <br />
      <h5
        class="rappel-info h7-font"
      >
        In a few words :
      </h5>
      <br />
      <br />
      <div
        class="row responsive-image"
      >
        <div
          class="col"
        >
          <img
            alt="software"
            src="icons8-boite-à-logiciel-64.png"
          />
          <br />
          <br />
          <span
            class="rappel-info"
          >
            A Software
          </span>
        </div>
        <div
          class="col responsive-image"
        >
          <img
            alt="navigation"
            src="icons8-carte-au-trésor-150.png"
          />
          <br />
          <br />
          <span
            class="rappel-info"
          >
            Non blocking
          </span>
        </div>
        <div
          class="col responsive-image"
        >
          <img
            alt="blocking"
            src="icons8-cadenas-100.png"
          />
          <br />
           
          <br />
          <span
            class="rappel-info"
          >
            Non intrusive
          </span>
        </div>
      </div>
      <br />
      <h7
        class="rappel-info"
      >
        To protect your child and discuss with him or her when a complicated situation arises.
      </h7>
      <br />
      <br />
      <br />
    </div>
  </div>
</div>
`;

exports[`Testing the Homepage rendering renders Home in french 1`] = `
<div>
  <div>
    <img
      alt="canvas"
      class="responsive-image"
      src="canvas2.png"
    />
    <span
      class="text-span"
    >
      Internet :
      <br />
       
      êtes-vous conscients des dangers
      <br />
       
      que rencontrent vos enfants ?
    </span>
    <div
      class="row responsive-image Home"
    >
      <div>
        <br />
        <br />
        <img
          alt="whois"
          src="CacherPseudo.jpg"
        />
      </div>
      <div
        class="txt-intro"
      >
        <h3
          class="h7-font"
        >
          Notre solution :
        </h3>
        <h6
          class="h6-font"
        >
          Pour une navigation saine, utilisez Überschutz.
          <br />
          Ce logiciel non bloquant vous préviendra lorsque votre enfant se met en danger sur Internet.
        </h6>
        <h8
          class="italic-txt"
        >
          Suicide, drogue, anorexie, harcèlement, contenus pornographiques ... Vous n'imaginez pas à quoi il est confronté.
        </h8>
      </div>
    </div>
    <div
      class="Home responsive-image"
    >
      <br />
      <br />
      <h5
        class="rappel-info h7-font"
      >
        En quelques mots :
      </h5>
      <br />
      <br />
      <div
        class="row responsive-image"
      >
        <div
          class="col"
        >
          <img
            alt="software"
            src="icons8-boite-à-logiciel-64.png"
          />
          <br />
          <br />
          <span
            class="rappel-info"
          >
            Un logiciel
          </span>
        </div>
        <div
          class="col responsive-image"
        >
          <img
            alt="navigation"
            src="icons8-carte-au-trésor-150.png"
          />
          <br />
          <br />
          <span
            class="rappel-info"
          >
            Non bloquant
          </span>
        </div>
        <div
          class="col responsive-image"
        >
          <img
            alt="blocking"
            src="icons8-cadenas-100.png"
          />
          <br />
           
          <br />
          <span
            class="rappel-info"
          >
            Non intrusif
          </span>
        </div>
      </div>
      <br />
      <h7
        class="rappel-info"
      >
        Pour protéger votre enfant et discuter avec lui lorsqu'une situation compliquée se présente.
      </h7>
      <br />
      <br />
      <br />
    </div>
  </div>
</div>
`;

exports[`Testing the Homepage rendering renders Home without crashing 1`] = `
<div>
  <div>
    <img
      alt="canvas"
      class="responsive-image"
      src="canvas2.png"
    />
    <span
      class="text-span"
    >
      Internet :
      <br />
       
      êtes-vous conscients des dangers
      <br />
       
      que rencontrent vos enfants ?
    </span>
    <div
      class="row responsive-image Home"
    >
      <div>
        <br />
        <br />
        <img
          alt="whois"
          src="CacherPseudo.jpg"
        />
      </div>
      <div
        class="txt-intro"
      >
        <h3
          class="h7-font"
        >
          Notre solution :
        </h3>
        <h6
          class="h6-font"
        >
          Pour une navigation saine, utilisez Überschutz.
          <br />
          Ce logiciel non bloquant vous préviendra lorsque votre enfant se met en danger sur Internet.
        </h6>
        <h8
          class="italic-txt"
        >
          Suicide, drogue, anorexie, harcèlement, contenus pornographiques ... Vous n'imaginez pas à quoi il est confronté.
        </h8>
      </div>
    </div>
    <div
      class="Home responsive-image"
    >
      <br />
      <br />
      <h5
        class="rappel-info h7-font"
      >
        En quelques mots :
      </h5>
      <br />
      <br />
      <div
        class="row responsive-image"
      >
        <div
          class="col"
        >
          <img
            alt="software"
            src="icons8-boite-à-logiciel-64.png"
          />
          <br />
          <br />
          <span
            class="rappel-info"
          >
            Un logiciel
          </span>
        </div>
        <div
          class="col responsive-image"
        >
          <img
            alt="navigation"
            src="icons8-carte-au-trésor-150.png"
          />
          <br />
          <br />
          <span
            class="rappel-info"
          >
            Non bloquant
          </span>
        </div>
        <div
          class="col responsive-image"
        >
          <img
            alt="blocking"
            src="icons8-cadenas-100.png"
          />
          <br />
           
          <br />
          <span
            class="rappel-info"
          >
            Non intrusif
          </span>
        </div>
      </div>
      <br />
      <h7
        class="rappel-info"
      >
        Pour protéger votre enfant et discuter avec lui lorsqu'une situation compliquée se présente.
      </h7>
      <br />
      <br />
      <br />
    </div>
  </div>
</div>
`;
